--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 openpyxl==3.1.2
 requests==2.31.0
 beautifulsoup4==4.12.2
+PyMuPDF==1.22.5
+Pillow==10.0.0
+numpy==1.24.3
+Flask==2.3.2
+Werkzeug==2.3.7
